--- a/package.json
+++ b/package.json
@@ -4,15 +4,32 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@dotlottie/react-player": "^1.6.19",
+    "@expo/metro-runtime": "~3.1.3",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.14",
+    "expo-dev-client": "~3.3.11",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-nfc-manager": "^3.14.13",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-web": "~0.19.6",
+    "expo-av": "~13.10.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
