--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ReactNative",
-  "version": "0.0.np1",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android ",
@@ -12,15 +12,23 @@
   "dependencies": {
     "@dotlottie/react-player": "^1.6.19",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-audio": "^4.3.0",
+    "react-lottie-player": "^2.0.0",
+    "react-native": "^0.74.1",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-gesture-handler": "^2.16.2",
     "react-native-nfc-manager": "^3.14.14",
-    "react-native-raw-bottom-sheet": "^3.0.0"
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
